# VulkanLab

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build-linux.sh
assets/prefabs/: checkerboard.glb  cube.glb  sphere.glb
assets/scenes/: demo.json
assets/shaders/: basic.slang  skybox.slang
pch/: CMakeLists.txt  pch.cpp
src/assets/: CMakeLists.txt
src/assets/include/assets/: asset_database.h  asset_handle.h  asset_storage.h  gltf_loader.h  image.h  image_loader.h  material.h  mesh.h  mesh_instance.h  prefab.h  skybox.h
src/assets/src/: asset_database.cpp  gltf_loader.cpp  image.cpp  image_loader.cpp  prefab.cpp
src/assets/src/private/: gltf_loader.cpp  image_loader.cpp  image_loader.h
src/core/: CMakeLists.txt
src/core/include/core/: file_system.h  input_handler.h  vertex.h
src/core/src/: file_system.cpp  input_handler.cpp
src/main/: CMakeLists.txt  main.cpp  vulkan_application.cpp  vulkan_application.h
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: camera.h  draw_command.h  gpu_device.h  gpu_image.h  gpu_material.h  gpu_mesh.h  gpu_resource_cache.h  renderer.h  vertex.h  vertex_layout.h
src/renderer/src/: camera.cpp  gpu_device.cpp  gpu_resource_cache.cpp  renderer.cpp
src/renderer/src/private/: buffer.cpp  buffer.h  gpu_image.h  gpu_material.h  gpu_resource_cache.cpp  gpu_resource_cache.h  image.cpp  image.h  memory.cpp  memory.h  shader.cpp  shader.h
src/renderer/src/render_passes/: geometry_pass.cpp  geometry_pass.h  render_pass_command_info.h  skybox_pass.cpp  skybox_pass.h
src/scene/: CMakeLists.txt
src/scene/include/scene/: scene.h  scene_loader.h
src/scene/src/: scene_loader.cpp
src/world/: CMakeLists.txt
src/world/include/world/: entity.h  world.h
src/world/include/world/components/: camera_component.h  render_component.h  transform_component.h
src/world/include/world/systems/: render_system.h
src/world/src/: world.cpp
src/world/src/components/: camera_component.cpp
src/world/src/systems/: render_system.cpp
